--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,70 @@
   margin: 0;
   box-sizing: border-box;
 }
+body {
+  background: #1f2937;
+  text-align: center;
+  padding: 0 4rem;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+}
+
+.logo {
+  font-size: 24px;
+  color: #f9faf8;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+ul {
+  list-style: none;
+  display: flex;
+  gap: 1.2rem;
+}
+
+a {
+  text-decoration: none;
+  color: #e5e7e8;
+  font-size: 18px;
+}
+.section-one {
+  display: flex;
+  justify-content: space-between;
+  padding: 3rem 0;
+}
+.left .title {
+  font-size: 48px;
+  font-weight: 900;
+  color: #f9faf8;
+}
+.left .text {
+  font-size: 18px;
+  color: #e5e7eb;
+  margin-bottom: 0.5rem;
+}
+.left {
+  max-width: 45%;
+  text-align: left;
+}
+.right {
+  background: #7a848d;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+  width: 500px;
+  color: #f9faf8;
+}
+.btn {
+  background: #3882f6;
+  border: 1px solid #3882f6;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1rem;
+  color: #fff;
+  cursor: pointer;
+}
