--- a/css/styles.css
+++ b/css/styles.css
@@ -1,72 +1,261 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+:root {
+  --pri-dark: #1f2937;
+  --clr-secondary: #e5e7eb;
+  --cl-header: #f9faf8;
+  --clr-blue: #3882f6;
+  --hero-text: 15px;
+  --logo-text: 24px;
+  --sec-text: 8px;
+  --info-text: 18px;
 }
-body {
-  background: #1f2937;
-  text-align: center;
-  padding: 0 4rem;
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
-}
-
-.logo {
-  font-size: 24px;
-  color: #f9faf8;
-  font-weight: 700;
-  letter-spacing: 2px;
-}
-ul {
-  list-style: none;
-  display: flex;
-  gap: 1.2rem;
-}
-
-a {
-  text-decoration: none;
-  color: #e5e7e8;
-  font-size: 18px;
-}
-.section-one {
-  display: flex;
-  justify-content: space-between;
-  padding: 3rem 0;
-}
-.left .title {
-  font-size: 48px;
-  font-weight: 900;
-  color: #f9faf8;
-}
-.left .text {
-  font-size: 18px;
-  color: #e5e7eb;
-  margin-bottom: 0.5rem;
-}
-.left {
-  max-width: 45%;
-  text-align: left;
-}
-.right {
-  background: #7a848d;
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 50px;
-  width: 500px;
-  color: #f9faf8;
+  background: var(--pri-dark);
 }
+.header {
+  width: 70%;
+}
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 0;
+}
+.nav h1 {
+  font-size: var(--hero-text);
+  color: var(--cl-header);
+}
+.nav ul {
+  display: flex;
+  gap: 10px;
+}
+.nav ul li a {
+  font-size: var(--sec-text);
+  color: var(--cl-header);
+}
+
+@media screen and (min-width: 800px) {
+  .nav h1 {
+    font-size: 24px;
+  }
+  .nav ul li a {
+    font-size: 18px;
+  }
+}
+
+.main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  gap: 20px;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.main .left,
+.main .right {
+  flex: 1;
+  min-width: 0;
+}
+
+.main .left {
+  text-align: left;
+}
+
+.main .left h1 {
+  font-size: 20px;
+  font-weight: 900;
+  line-height: 15px;
+  margin-bottom: 10px;
+  color: var(--clr-secondary);
+}
+
+.main .left p {
+  font-size: 10px;
+  color: var(--cl-header);
+  margin-bottom: 10px;
+  line-height: 0.9;
+}
+
 .btn {
-  background: #3882f6;
-  border: 1px solid #3882f6;
-  border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
-  color: #fff;
+  background-color: var(--clr-blue);
+  color: var(--cl-header);
+  border: none;
+  padding: 2px 10px;
+  font-size: 10px;
+  border-radius: 5px;
   cursor: pointer;
+  font-weight: 600;
+}
+
+.main .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 1;
+}
+
+.big-box {
+  width: 100%;
+  max-width: 200px;
+  height: 100px;
+  background-color: lightgray;
+  flex-shrink: 1;
+}
+
+@media screen and (min-width: 880px) {
+  .big-box {
+    max-width: 400px;
+    height: 200px;
+  }
+  .main .left h1 {
+    font-size: 36px;
+    line-height: 2rem;
+  }
+  .main .left p {
+    font-size: 16px;
+    line-height: 1.5rem;
+  }
+  .btn {
+    padding: 5px 15px;
+    font-size: 1rem;
+  }
+}
+.cont-dis {
+  background: var(--cl-header);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  text-align: center;
+  gap: 20px;
+}
+.pro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 70%;
+  gap: 50px;
+}
+.pro1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+}
+.box {
+  width: 100%;
+  max-width: 90px;
+  height: 50px;
+  border: 2px solid var(--clr-blue);
+  border-radius: 5px;
+  flex-shrink: 1;
+}
+.cont-header {
+  font-size: 18px;
+  font-weight: 700;
+}
+.pro1 p {
+  font-size: 10px;
+  width: 100%;
+}
+
+@media screen and (min-width: 880px) {
+  .box {
+    width: 100%;
+    max-width: 150px;
+    height: 100px;
+  }
+  .cont-header {
+    font-size: 28px;
+  }
+  .pro1 p {
+    font-size: 15px;
+  }
+}
+.quote-section {
+  background: var(--clr-secondary);
+}
+blockquote {
+  padding: 50px;
+  width: 80%;
+  align-items: center;
+  margin: 0 auto;
+  width: 70%;
+}
+blockquote .text {
+  font-style: italic;
+  font-weight: light;
+  font-size: 15px;
+}
+
+blockquote .cite {
+  font-weight: 600;
+  text-align: end;
+}
+@media screen and (min-width: 880px) {
+  blockquote .text {
+    font-size: 32px;
+  }
+}
+.contact-section {
+  display: flex;
+  justify-content: center;
+  padding: 40px;
+}
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--clr-blue);
+  padding: 20px 40px;
+  border-radius: 5px;
+  width: 70%;
+}
+.left h3 {
+  font-size: 10px;
+
+  color: var(--clr-secondary);
+}
+.left p {
+  font-size: 8px;
+  color: var(--clr-secondary);
+}
+.right .btn {
+  border: 1px solid var(--clr-secondary);
+}
+@media screen and (min-width: 880px) {
+  .left h3 {
+    font-size: 24px;
+  }
+  .left p {
+    font-size: 12px;
+  }
+}
+footer {
+  background: var(--pri-dark);
+  text-align: center;
+  font-size: 12px;
+  color: var(--cl-header);
+  padding: 10px;
+}
+
+@media screen and (min-width: 880px) {
+  footer {
+    font-size: 20px;
+    padding: 20px;
+  }
 }
